refactor: join services functionallity